--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Html 1.0</title>
-    <link rel="stylesheet" href="my-css-file"> 
-     <link rel="icon" href="img/1273327.jpg"> 
+    <link rel="stylesheet" href="index.css"> 
+     <link rel="icon" href="img/jesse ph2.jpg">   
     <style>      
         body {
             background-color:  linen;
@@ -90,11 +90,11 @@
 
          <table border="2" cellpadding="20" cellspacing="0"> <!-- 33th tag -->
             <tr>   <!-- 34th tag -->
-                <th><img src="img/saber.jpg" alt="" width="100" height="100"  ><code>$10</code>
+                <th><img src="img/saber.jpg" alt="" width="100" height="100"><code>$10</code>
          </th>       <!-- 35th tag -->
                 <th><img src="img/Kakashi_Hatake.png" alt="" width="100" height="100" ><code>$5</code>
                 </th>
-                <th><img src="img/demon slayer.jpg.crdownload" alt="" width="100" height="100"><code>$5</code></th>
+                <th><img src="img/Light_from_Death_Note.jpg" alt="" width="100" height="100"><code>$5</code></th>
                 <th><img src="img/Kirito_Sword_Art_Online.png" alt="" width="100" height="100"><code>$5</code></th>
             </tr>
             <tr>
@@ -124,7 +124,7 @@
             <input type="text" id="anime"></label> <br> <!-- 43rd tag --> 
 
             <textarea placeholder="write reason here">  </textarea>  <!-- 44th tag --> 
-             <var> Did you enjoy the <Del>test quiz?</Del>  </var>  <label for="radio">Yes</label>  <input type="radio" >   <!-- 47th tag --> <!--48th-->
+             <var> Did you enjoy the <Del>test </Del> quiz? </var>  <label for="radio">Yes</label>  <input type="radio" >   <!-- 47th tag --> <!--48th-->
 
                <label for="radio">No</label>           <!-- 45th tag --><!-- 46th tag -->
               <input type="radio" >
@@ -137,7 +137,11 @@
 <br>
 <br>
   <footer>  <!--tag 50-->
-               Thank you for your time
+               Thank you for your time.
+<a href="new pject.htm">
+     <p>Now heres a link to my personal page</p>
+</a>
+              
            </footer>
 
 
